# Churn-Prediction

./: app.py  pyproject.toml
ml/: train.py  update.py
templates/: base.html  index.html  predict.html  update.html
