[tool.poetry]
name = "churnprediction"
version = "0.1.0"
description = ""
authors = ["varad-comrad <fabricio_asfora_002@hotmail.com>"]
readme = "README.md"
packages = [{include = "churnprediction", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
