[tool.poetry]
name = "churnprediction"
version = "0.1.0"
description = ""
authors = ["varad-comrad <fabricio_asfora_002@hotmail.com>"]
readme = "README.md"
packages = [{include = "churnprediction", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
joblib = "^1.3.2"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
